--- a/navigationMenu.html
+++ b/navigationMenu.html
@@ -415,6 +415,24 @@
                         </ul>
                     </li>
 
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <i class="fa fa-bars"></i> 菜谱管理 <b class="fa fa-plus dropdown-plus"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="menuQuery.html">
+                                    <i class="fa fa-search" ></i> 菜谱查询
+                                </a>
+                            </li>
+                            <li>
+                                <a href="menuAdd.html">
+                                    <i class="fa fa-plus-circle"></i> 菜谱添加
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+
                 </ul>
 
             </li>
