--- a/vegetableAdd.html
+++ b/vegetableAdd.html
@@ -29,7 +29,7 @@
     <script src="../../../../../../oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
     <![endif]-->
 </head>
-<body class="bg-1">
+<body class="bg-3">
 
 <!-- Preloader -->
 <div class="mask"><div id="loader"></div></div>
@@ -50,7 +50,7 @@
 
             <!-- 头部开始 -->
             <div class="pageheader">
-                <h2><i class="fa fa-user fa-5x" style="line-height: 48px;padding-left: 1px;"></i> 蔬菜添加</h2>
+                <h2>蔬菜信息</h2>
             </div>
             <!-- 头部结束 -->
 
