--- a/frontpage/login.html
+++ b/frontpage/login.html
@@ -243,7 +243,8 @@
 
             },
             paramsReg:{
-
+                userState:1,
+                userPermissions:1,
             },
 
             loginShow:true,
