--- a/frontpage/about.html
+++ b/frontpage/about.html
@@ -172,7 +172,7 @@
                                     </div>
                                     <div class="mini_cart_footer">
                                        <div class="cart_button">
-                                            <a href="cart.html"><i class="fa fa-shopping-cart"></i> View cart</a>
+                                            <a href="collection.html"><i class="fa fa-shopping-cart"></i> View cart</a>
                                         </div>
                                         <div class="cart_button">
                                             <a href="checkout.html"><i class="fa fa-sign-in"></i> Checkout</a>
@@ -214,7 +214,7 @@
                                         <li class="menu-item-has-children">
                                             <a href="#">other Pages</a>
                                             <ul class="sub-menu">
-                                                <li><a href="cart.html">cart</a></li>
+                                                <li><a href="collection.html">cart</a></li>
                                                 <li><a href="wishlist.html">Wishlist</a></li>
                                                 <li><a href="checkout.html">Checkout</a></li>
                                                 <li><a href="my-account.html">my account</a></li>
@@ -406,7 +406,7 @@
                                             </div>
                                             <div class="mini_cart_footer">
                                                <div class="cart_button">
-                                                    <a href="cart.html"><i class="fa fa-shopping-cart"></i> View cart</a>
+                                                    <a href="collection.html"><i class="fa fa-shopping-cart"></i> View cart</a>
                                                 </div>
                                                 <div class="cart_button">
                                                     <a href="checkout.html"><i class="fa fa-sign-in"></i> Checkout</a>
@@ -580,7 +580,7 @@
                                                     </li>
                                                     <li><a href="#">other Pages</a>
                                                         <ul>
-                                                            <li><a href="cart.html">cart</a></li>
+                                                            <li><a href="collection.html">cart</a></li>
                                                             <li><a href="wishlist.html">Wishlist</a></li>
                                                             <li><a href="checkout.html">Checkout</a></li>
                                                             <li><a href="my-account.html">my account</a></li>
