菜谱审核，敏感词过滤

--- a/frontpage/index.html
+++ b/frontpage/index.html
@@ -67,7 +67,10 @@
                                         </ul>
                                     </div>
                                     <div class="header_account_list header_wishlist">
-                                        <a href="collection.html"><span class="lnr lnr-star"></span> <span class="item_count">3</span> </a>
+                                        <a href="collection.html" title="菜谱收藏"><span class="lnr lnr-star"></span></a>
+                                    </div>
+                                    <div class="header_account_list header_wishlist">
+                                        <a href="myMenu.html" title="我的菜谱"><span class="lnr lnr-menu"></span></a>
                                     </div>
                                     <!--用户头像-->
                                     <div class="header_account_list  mini_cart_wrapper">
