--- a/frontpage/vegetable-select.html
+++ b/frontpage/vegetable-select.html
@@ -69,7 +69,10 @@
                                             </ul>
                                         </div>
                                         <div class="header_account_list header_wishlist">
-                                            <a href="collection.html"><span class="lnr lnr-star"></span> <span class="item_count">3</span> </a>
+                                            <a href="collection.html" title="菜谱收藏"><span class="lnr lnr-star"></span> </a>
+                                        </div>
+                                        <div class="header_account_list header_wishlist">
+                                            <a href="myMenu.html" title="我的菜谱"><span class="lnr lnr-menu"></span></a>
                                         </div>
                                         <!--用户头像-->
                                         <div class="header_account_list  mini_cart_wrapper">
@@ -284,7 +287,7 @@
                             </div>
                         </div>
                         <div class="page_amount">
-                            <p>共 x 页 n 条数据</p>
+                            <p>共 {{params.pages}} 页 {{params.total}} 条数据</p>
                         </div>
                     </div>
                      <!--shop toolbar end-->
