--- a/userQuery.html
+++ b/userQuery.html
@@ -76,14 +76,14 @@
                                         <label>姓名</label>
                                         <input v-model="params.userName" type="text" class="form-control" style="width: 150px">
                                     </div>
-                                    <div class="col-sm-2 col-xs-2">
+                                   <!-- <div class="col-sm-2 col-xs-2">
                                         <label>状态</label>
                                         <select v-model="params.userState" class="form-control" style="width: 100px">
                                             <option value="-1">请选择状态</option>
                                             <option value="0">禁用</option>
                                             <option value="1">启用</option>
                                         </select>
-                                    </div>
+                                    </div>-->
                                     <div class="col-sm-2 col-xs-2">
                                         <label>权限</label>
                                         <select v-model="params.userPermissions" class="form-control" style="width: 100px">
